# pwman-cli

./: .gitignore  README.md  pyproject.toml
pwman/: __init__.py  cli.py  crypto.py  storage.py
tests/: test_crypto.py
