[project]
name = "pwman-cli"
version = "0.1.0"
description = "Kleiner Passwort-Manager (CLI) mit PBKDF2 + Fernet"
readme = "README.md"
authors = [{ name = "Nico", email = "" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "cryptography>=43.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
